hphp/test/zend/good/Zend/tests/exception_004.php.expectf

Fatal error: Exceptions must implement the Throwable interface. in %s/exception_004.php on line 8
